Bug 292335 - Systemsettings crash xdg-su
Summary: Systemsettings crash xdg-su
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kgamma (other bugs)
Version First Reported In: 1.0
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 294227 297242 307556 321278 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-24 16:16 UTC by nickjon
Modified: 2013-06-17 21:30 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nickjon 2012-01-24 16:16:07 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.6.00 (4.6.0) "release 6"
Qt Version: 4.7.1
Operating System: Linux 2.6.37.6-0.11-desktop x86_64
Distribution: "openSUSE 11.4 (x86_64)"

-- Information about the crash:
Running from command line as root xdg-su -c "systemsettings"
Switching between submenus (ie. gamma) under "Display and Monitor"
Does not occur when running from menu as regular user.
Trying to set global monitor power settings (for login screen).

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings), signal: Segmentation fault
[KCrash Handler]
#6  0x00007fc369a4c2c4 in QAbstractButton::isChecked (this=0x921e10) at widgets/qabstractbutton.cpp:772
#7  0x00007fc346a85a26 in KGamma::load (this=0xb32aa0) at /usr/src/debug/kdegraphics-4.6.0/kgamma/kcmkgamma/kgamma.cpp:307
#8  0x00007fc36a3f2601 in KCModule::qt_metacall (this=0xb32aa0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xb3eb10) at /usr/src/debug/kdelibs-4.6.0/build/kdeui/kcmodule.moc:89
#9  0x00007fc346a87900 in KGamma::qt_metacall (this=0xb32aa0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xb3eb10) at /usr/src/debug/kdegraphics-4.6.0/build/kgamma/kcmkgamma/kgamma.moc:71
#10 0x00007fc368a97a4a in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#11 0x00007fc3696e9edd in QWidget::event (this=0xb32aa0, event=0xb32b90) at kernel/qwidget.cpp:8659
#12 0x00007fc369698d14 in QApplicationPrivate::notify_helper (this=0x6457e0, receiver=0xb32aa0, e=0xb32b90) at kernel/qapplication.cpp:4445
#13 0x00007fc3696a122a in QApplication::notify (this=<value optimized out>, receiver=0xb32aa0, e=0xb32b90) at kernel/qapplication.cpp:4324
#14 0x00007fc36a2f89e6 in KApplication::notify (this=0x7fffdf6c6230, receiver=0xb32aa0, event=0xb32b90) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#15 0x00007fc368a83bdc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#16 0x00007fc368a873d5 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQtCore.so.4
#17 0x00007fc368aae763 in ?? () from /usr/lib64/libQtCore.so.4
#18 0x00007fc365f83bd3 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#19 0x00007fc365f843b0 in ?? () from /lib64/libglib-2.0.so.0
#20 0x00007fc365f84650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#21 0x00007fc368aae8ff in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#22 0x00007fc36973dd8e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#23 0x00007fc368a83032 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#24 0x00007fc368a83245 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#25 0x00007fc368a8768b in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#26 0x00000000004121f9 in _start ()

Reported using DrKonqi
Comment 1 Jekyll Wu 2012-02-16 11:49:18 UTC
*** Bug 294227 has been marked as a duplicate of this bug. ***
Comment 2 Jekyll Wu 2012-04-01 13:41:17 UTC
*** Bug 297242 has been marked as a duplicate of this bug. ***
Comment 3 Pino Toscano 2012-10-07 13:20:01 UTC
*** Bug 307556 has been marked as a duplicate of this bug. ***
Comment 4 David Smith 2012-10-08 02:46:21 UTC
My bug got marked as a duplicate of this.  Basically I was doing the same kind of thing except that I'm running it with elevated privs using a KDE Checkbox to run the application as a different user.

So this bug should be confirmed now, I'd imagine?
Comment 5 Christoph Feck 2012-11-11 01:23:02 UTC
Git commit 1918f145261a52a3b2a917c6784c2cebecbb4064 by Christoph Feck.
Committed on 11/11/2012 at 02:19.
Pushed by cfeck into branch 'master'.

Fix crash when XVidExtWrap is not available

This can happen when run as root
FIXED-IN: 4.10

M  +5    -5    kcmkgamma/kgamma.cpp

http://commits.kde.org/kgamma/1918f145261a52a3b2a917c6784c2cebecbb4064
Comment 6 Christoph Feck 2013-06-17 21:30:24 UTC
*** Bug 321278 has been marked as a duplicate of this bug. ***