Fix crash when XVidExtWrap is not available

This can happen when run as root
BUG: 292335
FIXED-IN: 4.10